--- a/index.html
+++ b/index.html
@@ -976,7 +976,7 @@
                 Présentation
               </h3>
               <p class="subtitle-a">
-                Lorem ipsum ou quoi la
+                Lorem ipsum
               </p>
               <div class="line-mf"></div>
             </div>
@@ -1055,7 +1055,7 @@
                 Réalisations
               </h3>
               <p class="subtitle-a">
-                Lorem ipsum ou quoi la
+                Lorem ipsum
               </p>
               <div class="line-mf"></div>
             </div>
@@ -1066,7 +1066,7 @@
             <div class="work-box">
               <a data-toggle="modal" data-target="#workmodal1" style="cursor: pointer;">
                 <div class="work-img">
-                  <img src="assets/img/work-1.png" alt="" class="img-fluid">
+                  <img src="assets/img/work-4.jpg" alt="" class="img-fluid">
                 </div>
               </a>
               <div class="work-content">
